--- a/website/css/flaticon.css
+++ b/website/css/flaticon.css
@@ -1,1 +1,38 @@
-@font-face{font-family:flaticon;src:url(../fonts/flaticon/font/Flaticon.eot);src:url(../fonts/flaticon/font/Flaticon.eot?#iefix) format("embedded-opentype"),url(../fonts/flaticon/font/Flaticon.woff) format("woff"),url(../fonts/flaticon/font/Flaticon.ttf) format("truetype"),url(../fonts/flaticon/font/Flaticon.svg#Flaticon) format("svg");font-weight:400;font-style:normal}@media screen and (-webkit-min-device-pixel-ratio:0){@font-face{font-family:flaticon;src:url(../fonts/flaticon/font/Flaticon.svg#Flaticon) format("svg")}}[class^=flaticon-]:before,[class*=" flaticon-"]:before,[class^=flaticon-]:after,[class*=" flaticon-"]:after{font-family:Flaticon;font-style:normal;font-weight:400;font-variant:normal;text-transform:none;line-height:1;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.flaticon-guarantee:before{content:"\f100"}.flaticon-shield:before{content:"\f101"}.flaticon-support:before{content:"\f102"}
+	/*
+  	Flaticon icon font: Flaticon
+  	Creation date: 26/08/2019 15:31
+  	*/
+
+@font-face {
+  font-family: "Flaticon";
+  src: url("../fonts/flaticon/font/Flaticon.eot");
+  src: url("../fonts/flaticon/font/Flaticon.eot?#iefix") format("embedded-opentype"),
+       url("../fonts/flaticon/font/Flaticon.woff2") format("woff2"),
+       url("../fonts/flaticon/font/Flaticon.woff") format("woff"),
+       url("../fonts/flaticon/font/Flaticon.ttf") format("truetype"),
+       url("../fonts/flaticon/font/Flaticon.svg#Flaticon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: "Flaticon";
+    src: url("./Flaticon.svg#Flaticon") format("svg");
+  }
+}
+
+[class^="flaticon-"]:before, [class*=" flaticon-"]:before,
+[class^="flaticon-"]:after, [class*=" flaticon-"]:after {
+  font-family: Flaticon;
+  font-size: 1.1em;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.flaticon-money-back:before { content: "\f100"; }
+.flaticon-metrics:before { content: "\f101"; }
+.flaticon-gear:before { content: "\f102"; }
+.flaticon-check:before { content: "\f103"; }
+.flaticon-patent:before { content: "\f104"; }
+.flaticon-support:before { content: "\f105"; }
