--- a/website/views/css/flaticon.css
+++ b/website/views/css/flaticon.css
@@ -1,6 +1,6 @@
 	/*
   	Flaticon icon font: Flaticon
-  	Creation date: 26/08/2019 15:31
+  	Creation date: 26/11/2019 20:24
   	*/
 
 @font-face {
@@ -25,14 +25,17 @@
 [class^="flaticon-"]:before, [class*=" flaticon-"]:before,
 [class^="flaticon-"]:after, [class*=" flaticon-"]:after {
   font-family: Flaticon;
-  font-size: 1.1em;
+  font-size: 1.4em;
   font-weight: 400;
   font-style: normal;
 }
 
-.flaticon-money-back:before { content: "\f100"; }
-.flaticon-metrics:before { content: "\f101"; }
-.flaticon-gear:before { content: "\f102"; }
-.flaticon-check:before { content: "\f103"; }
-.flaticon-patent:before { content: "\f104"; }
-.flaticon-support:before { content: "\f105"; }
+.flaticon-globe:before { content: "\f100"; }
+.flaticon-time:before { content: "\f101"; }
+.flaticon-shield:before { content: "\f102"; }
+.flaticon-money:before { content: "\f103"; }
+.flaticon-target:before { content: "\f104"; }
+.flaticon-task:before { content: "\f105"; }
+.flaticon-money-1:before { content: "\f106"; }
+.flaticon-documents:before { content: "\f107"; }
+.flaticon-payment:before { content: "\f108"; }
